--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -109,7 +109,7 @@
                                         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
 
 
-                                        <li><a href="../SpiderNet/service/manage/loginPage.html">E-Learnning</a></li>
+                                        <li><a href="../SpiderNet/service/manage/loginPage.html">E-learning</a></li>
                                         <!--<li><a href="http://xa.chinasoftosg.com/lms/login.html">Skill appraisal</a></li>-->
 
 
