--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -1089,7 +1089,7 @@
 												<tbody>
 													<tr>
 														<td style="border-top:0px"><a
-															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:business_analyst">Business Analyst</span></a></td>
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:business_analyst:digital:index">Business Analyst</span></a></td>
 													</tr>
 												</tbody>
 											</table>
