--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -231,7 +231,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-3-label">Agile development capability of HSBC business line.</h4>
+						<h4 class="modal-title" id="project-3-label">Agile development capability</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -264,7 +264,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-4-label">Data migration capability solutions of HSBC business line.</h4>
+						<h4 class="modal-title" id="project-4-label">Data migration capability</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -331,7 +331,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-6-label">HSBC Data migration capability solutions of HSBC business line.</h4>
+						<h4 class="modal-title" id="project-6-label">HSBC Data migration capability</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -363,7 +363,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-7-label">English training ability solutions of HSBC business line.</h4>
+						<h4 class="modal-title" id="project-7-label">English training ability</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -396,7 +396,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-8-label">Metadata governance capacity solutions of HSBC business line.</h4>
+						<h4 class="modal-title" id="project-8-label">Metadata governance capacity </h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -433,7 +433,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-9-label">PCF solutions.</h4>
+						<h4 class="modal-title" id="project-9-label">PCF solutions</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -500,7 +500,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-11-label">Wechat banking solutions of HSBC.案</h4>
+						<h4 class="modal-title" id="project-11-label">Wechat banking solutions</h4>
 					</div>
 					<div class="modal-body">
 						<h3>WeChat Banking</h3>
@@ -540,7 +540,7 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-12-label">Face recognition ability solutions of HSBC business line.</h4>
+						<h4 class="modal-title" id="project-12-label">Face recognition ability </h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
@@ -648,7 +648,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-3">Agile development capability of HSBC business line.</a>
+									data-target="#project-3">Agile development capability</a>
 							</div>
 							<!-- Modal -->
 
@@ -664,7 +664,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-4">Construction project in capability center of HSBC business line.</a>
+									data-target="#project-4">Construction project in capability center</a>
 							</div>
 							<!-- Modal -->
 
@@ -680,7 +680,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-6">Data migration capability solutions of HSBC business line.案</a>
+									data-target="#project-6">Data migration capability</a>
 							</div>
 							<!-- Modal -->
 
@@ -696,7 +696,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-7">English training ability solutions of HSBC business line.</a>
+									data-target="#project-7">English training ability</a>
 							</div>
 							<!-- Modal -->
 
@@ -712,7 +712,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-8">Metadata governance capacity solutions of HSBC business line.</a>
+									data-target="#project-8">Metadata governance capacity</a>
 							</div>
 							<!-- Modal -->
 
@@ -744,7 +744,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-12">Face recognition ability solutions of HSBC business line.</a>
+									data-target="#project-12">Face recognition ability</a>
 							</div>
 							<!-- Modal -->
 
@@ -776,7 +776,7 @@
 								</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-								   data-target="#project-11">22.Wechat banking solutions of HSBC.</a>
+								   data-target="#project-11">Wechat banking solutions</a>
 							</div>
 							<!-- Modal -->
 
@@ -792,7 +792,7 @@
 								</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-								   data-target="#project-10">HSBCTestin solutions of HSBC devices.</a>
+								   data-target="#project-10">Testin solutions of devices.</a>
 							</div>
 							<!-- Modal -->
 
@@ -816,7 +816,7 @@
 	<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
 	<noscript><a href="//www.51.la/?19148250" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" /></a></noscript>
 	<script language="javascript" type="text/javascript"
-			src="//quote.users.51.la/?id=19148250&amp;mb=网站访问+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
+			src="//quote.users.51.la/?id=19148250&amp;mb=Amount of access+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
 	</script>
 	<!--网站流量统计结束-->
 	<!-- JavaScript files placed at the end of the document so the pages load faster
