--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -509,6 +509,11 @@ a.btn.btn-default.btn-block {
 												href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E6%8A%80%E6%9C%AF%E5%AE%9E%E7%8E%B0:service_extension_point"
 												target="_blank">8. Service extension point</a>
 										</div>
+										<div class="col-md-4">
+											<a
+												href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:as400%E8%AF%BE%E4%BB%B6:%E9%A6%96%E9%A1%B5"
+												target="_blank">9. AS400</a>
+										</div>
 
 									</div>
 								</div>
